# sprocketship

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  TESTING.md  pyproject.toml
.github/workflows/: README.md  publish-to-pypi.yml  test.yml
sprocketship/: __init__.py  cli.py  utils.py
sprocketship/example/: .env.example  .gitignore  .sprocketship.yaml  .sprocketship.yml  README.md
sprocketship/example/procedures/: .sprocketship.yml
sprocketship/example/procedures/admin/: create_database_reader.js  create_database_writer.js  drop_database_if_expired.js
sprocketship/example/procedures/development/: create_temp_database.js
sprocketship/example/procedures/sysadmin/: create_database.js  create_warehouse.js  drop_database.js
sprocketship/example/procedures/useradmin/: create_role.js  grant_role.js  revoke_role.js
sprocketship/templates/: javascript.sql
tests/: README.md  SQL_VALIDATION.md  __init__.py  conftest.py  test_cli.py  test_sql_validation.py  test_utils.py
tests/fixtures/: .sprocketship.yml
tests/fixtures/admin/: create_database.js  drop_database.js
tests/fixtures/useradmin/: create_user.js
