[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sprocketship"
version = "1.0.4"
authors = [
  { name="Nicklaus Roach", email="nicklausroach@gmail.com" },
]
readme = "README.md"
description = "Better stored procedure management"
dependencies = [
    "click",
    "snowflake-connector-python",
    "ABSQL",
    "ruamel.yaml",
    "jinja2",
    "flatdict!=4.0.1"  # Exclude 4.0.1 due to Python 3.9 build issue
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
sprocketship = "sprocketship.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "sqlfluff",  # Optional: for thorough SQL linting
]

[project.urls]
Homepage = "https://github.com/nicklausroach/sprocketship"
Issues = "https://github.com/nicklausroach/sprocketship/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
