[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sprocketship"
version = "1.1.1"
requires-python = ">=3.9"
authors = [
  { name="Nicklaus Roach", email="nicklausroach@gmail.com" },
]
readme = "README.md"
description = "Better stored procedure management"
dependencies = [
    "click",
    "snowflake-connector-python",
    "ABSQL",
    "ruamel.yaml",
    "jinja2",
    "flatdict!=4.0.1"  # Exclude 4.0.1 due to Python 3.9 build issue
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "sqlfluff",  # Optional: for thorough SQL linting
    "vulture>=2.0",  # Dead code detection
]

[project.scripts]
sprocketship = "sprocketship.cli:main"

[project.urls]
Homepage = "https://github.com/nicklausroach/sprocketship"
Issues = "https://github.com/nicklausroach/sprocketship/issues"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.vulture]
# Paths to scan for dead code
paths = ["sprocketship"]
# Minimum confidence (0-100) for reporting dead code
# Higher values = fewer false positives
min_confidence = 80
# Exclude test files and common patterns
exclude = ["tests/", "**/__pycache__/"]
# Report unused imports, functions, classes, variables
make_whitelist = false
